--- a/app.json
+++ b/app.json
@@ -25,6 +25,7 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.app.thryft",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
