--- a/package.json
+++ b/package.json
@@ -10,22 +10,30 @@
   },
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.2.3",
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/material-bottom-tabs": "^6.2.16",
+    "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.7",
     "expo-app-loading": "^2.1.1",
+    "expo-firebase-core": "^6.0.0",
+    "expo-firebase-recaptcha": "^2.3.1",
     "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.3.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-elements": "^3.4.3",
+    "react-native-pager-view": "6.2.0",
     "react-native-paper": "^5.10.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0",
+    "react-native-webview": "13.2.2",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
