--- a/package.json
+++ b/package.json
@@ -27,17 +27,21 @@
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-elements": "^3.4.3",
+    "react-native-image-crop-picker": "^0.40.0",
     "react-native-pager-view": "6.2.0",
     "react-native-paper": "^5.10.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "^13.9.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0",
     "react-native-webview": "13.2.2",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "expo-camera": "~13.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-svg-transformer": "^1.1.0"
   },
   "private": true
 }
