--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.7",
     "expo-app-loading": "^2.1.1",
+    "expo-camera": "~13.4.2",
     "expo-firebase-core": "^6.0.0",
     "expo-firebase-recaptcha": "^2.3.1",
     "expo-font": "~11.4.0",
@@ -26,7 +27,6 @@
     "firebase": "^10.3.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-elements": "^3.4.3",
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-pager-view": "6.2.0",
     "react-native-paper": "^5.10.1",
@@ -36,8 +36,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0",
     "react-native-webview": "13.2.2",
-    "react-navigation": "^4.4.4",
-    "expo-camera": "~13.4.2"
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
